--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
             <div class="container">
                 <h1 class="header wow fadeIn">Resum&eacute</h1>
                 <div class="col-mid-12">
-                    <a href="/Resources/Resume Ver 1 .pdf" target="_blank"><img src="Resources/resume screenshot.tiff" class="img-responsive"></a>
+                    <a href="/Resources/Resume Ver 1 .pdf" target="_blank"><img src="Resources/resume screenshot.png" class="img-responsive"></a>
                 </div>
             </div>
         </div>
