--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="/Resources/Icons/css/stackicons-min.css" type="text/css" />
 
-    <title></title>
+    <title>Ramandeep Farmaha</title>
 </head>
 
 <body>
@@ -1080,7 +1080,7 @@
             <div class="container">
                 <h1 class="header wow fadeIn">Resum&eacute</h1>
                 <div class="col-mid-12">
-                    <a href="/Resources/Resume Ver 1 .pdf" target="_blank"><img src="Resources/resume screenshot.png" class="img-responsive wow fadeIn"></a>
+                    <a href="/Resources/Resume Ver 1 .pdf" target="_blank"><img src="Resources/resume screenshot.png" class="img-responsive wow fadeIn" alt="Ramandeep Farmaha"></a>
                 </div>
             </div>
         </div>
