--- a/index.html
+++ b/index.html
@@ -1028,45 +1028,40 @@
                     <div class="col-md-5 col-sm-5">
                         <ul class="skill-list">
                             <li class="skill">
-                                <h3>HTML5</h3>
-                                <progress class="skill-2" max="100" value="100"></progress>
+                                <h3>Java</h3>
+                                <progress class="skill-6" max="100" value="80"></progress>
                             </li>
                             <li class="skill">
-                                <h3>CSS3</h3>
-                                <progress class="skill-3" max="100" value="100"></progress>
+                                <h3>Python</h3>
+                                <progress class="skill-7" max="100" value="80"></progress>
                             </li>
                             <li class="skill">
                                 <h3>C++</h3>
                                 <progress class="skill-1" max="100" value="80"></progress>
                             </li>
-                            
                             <li class="skill">
-                                <h3>Javascript</h3>
-                                <progress class="skill-4" max="100" value="80"></progress>
-                            </li>
-                            <li class="skill">
-                                <h3>AngularJS</h3>
-                                <progress class="skill-5" max="100" value="80"></progress>
+                                <h3>Cassandra</h3>
+                                <progress class="skill-4" max="100" value="60"></progress>
                             </li>
                         </ul>
                     </div>
                     <div class="col-md-5 col-sm-5  col-md-offset-2 col-sm-offset-2">
                         <ul class="col-mid-6 skill-list">
                             <li class="skill">
-                                <h3>MongoDB</h3>
-                                <progress class="skill-6" max="100" value="60"></progress>
+                                <h3>Apache Spark</h3>
+                                <progress class="skill-5" max="100" value="60"></progress>
                             </li>
                             <li class="skill">
-                                <h3>ExpressJS</h3>
-                                <progress class="skill-7" max="100" value="60"></progress>
+                                <h3>AngularJS</h3>
+                                <progress class="skill-5" max="100" value="80"></progress>
                             </li>
                             <li class="skill">
-                                <h3>NodeJS</h3>
-                                <progress class="skill-8" max="100" value="60"></progress>
+                                <h3>HTML5</h3>
+                                <progress class="skill-2" max="100" value="100"></progress>
                             </li>
-                           <li class="skill">
-                                <h3>Objective C</h3>
-                                <progress class="skill-9" max="100" value="30"></progress>
+                            <li class="skill">
+                                <h3>CSS3</h3>
+                                <progress class="skill-3" max="100" value="100"></progress>
                             </li>
                         </ul>
                     </div>
