Changed some description on page

--- a/index.html
+++ b/index.html
@@ -1013,9 +1013,22 @@
             <div class="container">
                 <h1 class="header wow fadeIn">Who Am I</h1>
                 <div class="col-xs-12 col-md-12 wow fadeIn" style="font-family:'Open Sans'">
-                       <p>I'm a <a href="https://uwaterloo.ca/systems-design-engineering/" target="_blank">Systems Design Engineer-in-Training</a> at the University of Waterloo. I enjoy expanding my boundaries by learning about different topics, such as software development and sustainable innovation, and by constantly pushing and reinventing myself.</p> 
-                    <p>As someone who believes in creating change, making my voice heard has always played an important role in my life. I’ve helped out with many NGO’s, including Free The Children, and worked alongside politicians, as well I’ve written for local newspapers on different global issues. I bring a unique skillset of leadership and strong verbal and oral communication skills, along with the abilities to analyze and problem solve effectively.</p>
-                    <p>I believe that true innovation stems from not only curiosity and passion, but also the willingness to learn. I strive to take the unconventional route by diversifying my knowledge across a range of different topics and subjects that interest me. I hope to make an positive impact in the world by working on projects that improve the lives of others.</p>
+                       <p>I'm a <a href="https://uwaterloo.ca/systems-design-engineering/" target="_blank">Systems Design Engineer-in-Training</a> at the University of Waterloo. I find value in taking the path least explored rather than the path of least resistance. With my strong leadership and communication abilities, and my knack for problem solving, I enjoy taking on complex projects that provide real value.</p> 
+                    <p>In my off time when I'm not coding or working on side projects, you can most likely find me at the gym trying to break a new personal record, or on the courts shooting some hoops. I also enjoy a good story, be it reading the latest fantasy fiction phenomenon, analyzing the latest episode of Westworld or binge watching a director’s filmography (currently that’s <a href="http://www.imdb.com/name/nm0898288/" target="_blank">Denis Villeneuve</a>).</p>
+                    <p>I believe that true innovation stems from not only curiosity and passion, but also the willingness to learn. I strive to take the unconventional route by diversifying my knowledge across a range of different topics and subjects. I hope to make an positive impact in the world by working on projects that improve the lives of others.</p>
+                    <p>Ancora Imparo</p>
+                </div>
+                
+            </div>
+
+        </div>
+
+        <div class="aboutMe">
+            <div class="container">
+                <h1 class="header wow fadeIn">Things I've Built</h1>
+                <div class="col-xs-12 col-md-12 wow fadeIn" style="font-family:'Open Sans'">
+                       <p><a href="http://wikisummarizr.info" target="_blank">Wikipedia Summarizr</a> - Neat little tool that uses NLP to summarize Wikipedia articles on the fly</p>
+                       <p><a href="https://github.com/marwanad/music_bot" target="_blank">Mus.IQ</a> - Song guessing Kik bot game built during Kik's internal hackathon</p>
                 </div>
                 
             </div>
