Fixed typo in linkedIn url

--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
                 <h1 class="header wow fadeIn">Where to Find Me</h1>
                 <div class="col-mid-12" style="text-align: center">
                     <span class="col-mid-12 st-shape-r4 st-single-color-brand wow fadeIn">
-                            <a class="st-icon-linkedin button" href="www.linkedin.com/in/ramandeep-farmaha" target="_blank" style="font-size: 600%"></a>
+                            <a class="st-icon-linkedin button" href="https://www.linkedin.com/in/ramandeep-farmaha" target="_blank" style="font-size: 600%"></a>
                         </span>
                     <span class="col-mid-12 st-shape-r4 st-single-color-brand wow fadeIn">
                             <a class="st-icon-github button" href="https://github.com/rfarmaha" target="_blank" style="font-size: 600%"></a>
